InfraPlatform/rds/rdspostgres/v3/cf-rds-postgres.yaml
AWSTemplateFormatVersion: 2010-09-09
#Description:
Description: Setup for PostgreSQL Instance V1
Parameters:

  AppShortName:
    Type: String
    Description: AppShortName

  EnvName:
    Type: String
    Description: Environment
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c
  
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)

  AvailabilityZone:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Select the Primary Region for PostgreSQL Deployment.
    AllowedValues:
      - ap-southeast-1a
      - ap-southeast-1b
      - ap-southeast-1c

# Subnet CIDR parameters
  VPCSubnetCidrAppAZ1:
    Type: String
    Description: AZ1 App Subnet
  
  VPCSubnetCidrAppAZ2:
    Type: String
    Description: AZ2 App Subnet

  VPCSubnetCidrAppAZ3:
    Type: String
    Description: AZ3 App Subnet

  # DB Subnet ID parameters
  DBSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: List of DB Subnet Ids
  
  DeploymentServer:
    Type: String
    Description: Deployment Server IP

  MultiAZ:
    Type: String
    Description: Multi-AZ deployment (true / false)
    AllowedValues: ['true', 'false']

  PgsqlDBParameterGroupFamily:
    Type: String
    Description: Parameter group family, eg, postgres16

  PgsqlDBInstanceClass:
    Type: String
    Description: The database instance type, eg - db.m6i.xlarge

  PgsqlDBEngine:
    Type: String
    Description: Enter the SQL DB Engine Name, se is standard and ee is enterprise
    AllowedValues:
      - postgres

  PgsqlDBMajorEngineVersion:
    Type: String
    Description: Enter the DB Engine version, eg- 16.00
  
  PgsqlEngineVersion:
    Type: String
    Description : Get the latest engine version from the AWS console, eg -16.4
    Default: '16.4'

  PgsqlAllocatedStorage:
    Type: String
    Description: Total DB size

  PgsqlMaxAllocatedStorage:
    Type: String
    Description: Maximum storage for DB instance

  PgsqlStorageType:
    Type: String
    Description: Volume Type

  PgsqlStorageIops:
    Type: String
    Description: Storage IOPS for the allocated storage
    Default: ''

  PgsqlMasterUsernameDev:
    Type: String
    Default: dbadmin
    NoEcho: true

  PgsqlMasterUserPasswordDev:
    Type: String
    Default: dbadmin123
    NoEcho: true

  PgsqlProdDBPort:
    Type: String
    Default: 53341
    NoEcho: true

  PgsqlNProdDBPort:
    Type: String
    Default: 53331
    NoEcho: true

  EnableIAMDatabaseAuthentication:
    Type: String
    Description: Enable IAM database authentication (true / false)
    AllowedValues: ['true', 'false']
    Default: 'false'

# VPC Subnet CIDR parameters
  VpcCidr1:
    Description: VPC CIDR 1 IP Range
    Type: String
    Default: ""

  VpcCidr2:
    Description: VPC CIDR 2 IP Range
    Type: String
    Default: ""

  VpcCidr3:
    Description: VPC CIDR 3 IP Range
    Type: String
    Default: ""

  S3PrefixListId:
    Description: S3 PrefixList ID
    Type: String
    Default: ""

  HCCVpceCidr:
    Description: HCC VPC Endpoint Subnet, Fixed CIDR Range from HCC
    Type: String
    Default: ""

  KMSKeyRotationPeriod:
    Type: Number
    Description: Number of days for KMS key rotation period (default 365 days)
    Default: 365

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasVPCSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, '']]
  IsMultiAZ: !Equals [!Ref MultiAZ, 'true']
  HasStorageIops: !Not [!Equals [!Ref PgsqlStorageIops, ""]]
  HasVpcCidr3: !Not [!Equals [!Ref VpcCidr3, '']]
  HasVpcCidr2: !Not [!Equals [!Ref VpcCidr2, '']]
  HasHCCVpceCidr: !Not [!Equals [!Ref HCCVpceCidr, ""]]
  HasS3PrefixListId: !Not [!Equals [!Ref S3PrefixListId, ""]]

Resources:
# KMS Key for encrypt the PostgreSQL backups and DB related Files (new)
  pgsqlencryptionkmskey:
    Type: 'AWS::KMS::Key'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Description: 'KMS key to encrypt DB related files and native backups'
      EnableKeyRotation: true
      RotationPeriodInDays: !Ref KMSKeyRotationPeriod
      PendingWindowInDays: 7
      KeyPolicy:
        Version: 2012-10-17
        Id: key-default-1
        Statement:
          - Sid: Enable IAM Root Permissions
            Effect: Allow
            Principal:
              AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:root'
            Action: 'kms:*'
            Resource: '*'
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"
          
# Alias for the KMS key (new)
  pgsqlencryptionkmskeyalias:
    Type: 'AWS::KMS::Alias'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AliasName: !Sub 'alias/${AppShortName}-${EnvName}-rdspostg-encryption'
      TargetKeyId: !Ref pgsqlencryptionkmskey

  pgsqlmonitoringencryptionkmskey:
    Type: 'AWS::KMS::Key'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Description: 'KMS key to encrypt DB related files and native backups'
      EnableKeyRotation: true
      RotationPeriodInDays: !Ref KMSKeyRotationPeriod
      PendingWindowInDays: 7
      KeyPolicy:
        Version: 2012-10-17
        Id: key-default-1
        Statement:
          - Sid: Enable IAM Root Permissions
            Effect: Allow
            Principal:
              AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:root'
            Action: 'kms:*'
            Resource: '*'
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"
            
  pgsqlmonitoringencryptionkmskeyalias:
    Type: 'AWS::KMS::Alias'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AliasName: !Sub 'alias/${AppShortName}-${EnvName}-rdspostg-monitoring-encryption'
      TargetKeyId: !Ref pgsqlmonitoringencryptionkmskey

  dbcombineds3bucket:
    Type: 'AWS::S3::Bucket'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      BucketName: !Sub '${AppShortName}-${EnvName}-rdspostg-s3store'
      BucketEncryption:
        ServerSideEncryptionConfiguration: 
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      AccessControl: Private
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"

  s3bucketpolicy: #new updated by Tin
    Type: AWS::S3::BucketPolicy
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Bucket: !Ref dbcombineds3bucket
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: EnforceTLSv12orHigher
            Effect: Deny
            Principal: '*'
            Action: s3:*
            Resource: 
              - !GetAtt dbcombineds3bucket.Arn
              - !Join ['', [!GetAtt dbcombineds3bucket.Arn, '/*']]
            Condition:
              NumericLessThan:
                s3:TlsVersion: 1.2
          - Sid: AllowSSLRequestsOnly
            Effect: Deny
            Principal: '*'
            Action: s3:*
            Resource: 
              - !GetAtt dbcombineds3bucket.Arn
              - !Join ['', [!GetAtt dbcombineds3bucket.Arn, '/*']]
            Condition:
              Bool:
                aws:SecureTransport: 'false'

#IAM Roles and Policies
  dbenhancedmonitoringrole:  #hsar-prd-pgsql-enhancedmonitoring-role
    Type: 'AWS::IAM::Role'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - monitoring.rds.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole
      RoleName: !Sub '${AppShortName}-${EnvName}-rdspostg-enhancedmonitoring-role'
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"

  combineddbpolicy:
      Type: 'AWS::IAM::ManagedPolicy'
      DeletionPolicy: !If [IsProduction, Retain, Delete]
      UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
      Properties:
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Action:
                - kms:Decrypt
                - kms:DescribeKey
                - kms:GenerateDataKey
              Resource:
                - !GetAtt pgsqlencryptionkmskey.Arn
            - Effect: Allow
              Action:
                - s3:ListAllMyBuckets
              Resource: "*"
            - Effect: Allow
              Action:
                - s3:GetBucketLocation
                - s3:GetBucketACL
                - s3:ListBucket
              Resource:
                - !GetAtt dbcombineds3bucket.Arn
            - Effect: Allow
              Action:
                - s3:ListMultipartUploadParts
                - s3:AbortMultipartUpload
                - s3:PutObject
              Resource:
                - !Sub '${dbcombineds3bucket.Arn}/*'
            - Effect: Allow
              Action:
                - s3:GetObjectMetaData
                - s3:GetObject
                - s3:PutObject
                - s3:ListMultipartUploadParts
                - s3:AbortMultipartUpload
              Resource:
                - !Sub '${dbcombineds3bucket.Arn}/*'
        ManagedPolicyName: !Sub '${AppShortName}-${EnvName}-rdspostg-policy'

  dbcombineds3role:
    Type: 'AWS::IAM::Role'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - rds.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - !Ref combineddbpolicy
      RoleName: !Sub '${AppShortName}-${EnvName}-rdspostg-role'
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"

# Security Group
  pgsqldbsecuritygroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupDescription: Security Group for PostgreSQL DB
      GroupName: !Sub '${AppShortName}-${EnvName}-sg-rdspostg-db-postgresql'
      Tags:
        - Key: Name
          Value: !Sub '${AppShortName}-${EnvName}-sg-rdspostg-db-postgresql'
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
          ToPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow App AZ1 Subnet
        - IpProtocol: tcp
          FromPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
          ToPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow App AZ2 Subnet
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
            ToPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
          ToPort: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
          CidrIp: !Ref DeploymentServer
          Description: Allow Deployment Server to Access the PostgreSQL instance 
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasS3PrefixListId
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            DestinationPrefixListId: !Ref S3PrefixListId
            Description: Allow access to Amazon S3 Endpoint
          - !Ref "AWS::NoValue"
        - !If
          - HasHCCVpceCidr
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HCCVpceCidr
            Description: HCC VPC Endpoint Subnet
          - !Ref "AWS::NoValue"      

#PostgreSQL DB Subnet Group
  pgsqldbsubnetgroup:
    Type: AWS::RDS::DBSubnetGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties: 
      DBSubnetGroupDescription: !Sub '${AppShortName}-${EnvName}-subnetgroup'
      DBSubnetGroupName: !Sub '${AppShortName}-${EnvName}-subnetgroup'
      SubnetIds: !Ref DBSubnetIds
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"

# PostgreSQL DB Parameter Group
  pgsqldbparametergroup:
    Type: AWS::RDS::DBParameterGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties: 
      Description: !Sub '${AppShortName}-${EnvName}-postgres-dbparametergroup'
      DBParameterGroupName: !Sub '${AppShortName}-${EnvName}-postgres-dbparametergroup'
      Family: !Ref PgsqlDBParameterGroupFamily
      Tags:
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"

  pgsqlinstance:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]  
    Properties:
      StorageEncrypted: true
      MonitoringRoleArn: !GetAtt dbenhancedmonitoringrole.Arn
      PreferredBackupWindow: "16:00-17:00"
      MonitoringInterval: 60
      DBParameterGroupName: !Ref pgsqldbparametergroup
      NetworkType: "IPV4"
      CopyTagsToSnapshot: true
      Engine: !Ref PgsqlDBEngine
      PerformanceInsightsKMSKeyId: !GetAtt pgsqlmonitoringencryptionkmskey.Arn
      LicenseModel: "postgresql-license"
      EngineVersion: !Ref PgsqlEngineVersion
      StorageType: !Ref PgsqlStorageType
      KmsKeyId: !GetAtt pgsqlencryptionkmskey.Arn
      DBInstanceClass: !Ref PgsqlDBInstanceClass
      PerformanceInsightsRetentionPeriod: !If [IsProduction, '31', '7']
      PreferredMaintenanceWindow: "sat:18:00-sat:19:00"
      EnablePerformanceInsights: true
      AutoMinorVersionUpgrade: true
      DBSubnetGroupName: !Ref pgsqldbsubnetgroup
      DeletionProtection: true
      Iops: !If 
        - HasStorageIops
        - !Ref PgsqlStorageIops
        - !Ref "AWS::NoValue"
      DBInstanceIdentifier: !Sub '${AppShortName}-${EnvName}-rdspostg'
      AllocatedStorage: !Ref PgsqlAllocatedStorage
      CACertificateIdentifier: "rds-ca-rsa4096-g1"
      ManageMasterUserPassword: false
      VPCSecurityGroups:
      - !GetAtt pgsqldbsecuritygroup.GroupId
      MasterUsername: !Ref PgsqlMasterUsernameDev
      MasterUserPassword: !Ref PgsqlMasterUserPasswordDev
      EnableIAMDatabaseAuthentication: !Ref EnableIAMDatabaseAuthentication
      MaxAllocatedStorage: !Ref PgsqlMaxAllocatedStorage
      BackupRetentionPeriod: !If [IsProduction, '35', '7']
      PubliclyAccessible: false
      EnableCloudwatchLogsExports:
      - "postgresql"
      - "upgrade"
      Port: !If [IsProduction, !Ref PgsqlProdDBPort, !Ref PgsqlNProdDBPort]
      MultiAZ: !Ref MultiAZ
      AvailabilityZone: !If [IsMultiAZ, !Ref "AWS::NoValue", !Ref AvailabilityZone ]
      Tags:
        - Key: BACKUP-DAILY
          Value: 'YES'
        - Key: BACKUP-WEEKLY
          Value: 'YES'
        - Key: BACKUP-MONTHLY
          Value: 'YES'
        - Key: BACKUP-YEARLY
          Value: 'YES'
        - Key: BACKUP-CONTINUOUS
          Value: 'YES'
        - Key: "IaCVersion"
          Value: "InfraPlatform-rdspostg-v3"

# SSM Parameter store for PostgreSQL Instance:
  parameterpgsql:
    Type: AWS::SSM::Parameter
    DependsOn: pgsqlinstance
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-pgsqlinstancename
      Description: !Sub ${AppShortName}-${EnvName}-parameter-pgsqlinstancename
      Value: !Ref pgsqlinstance
      Type: String
      Tags:
        IaCVersion: "InfraPlatform-rdspostg-v3"
